# LLM-RepliKit

./: .gitattributes  .gitignore  LICENSE  README.md
replikit/: Dockerfile  README.md  main.py  pyproject.toml
replikit/base/: postprocessor.py  preprocessor.py  runner.py
replikit/configs/: global.yaml
replikit/studies/001/: preprocessor.py
replikit/studies/002/: .dockerignore  Dockerfile  README.md  postprocessor.py  preprocessor.py  run_pipeline.sh  runner.py
replikit/studies/002/evidence/: all_runs_scores.csv  average_scores.csv  report.txt
replikit/studies/003/: Dockerfile  README.md  convert_results.py  postprocessor.py  preprocessor.py  run_automated_assessments.sh  runner.py
replikit/studies/005/: Dockerfile  README.md  postprocessor.py  preprocessor.py  runner.py
replikit/studies/005/evidence/: quantiles.csv
replikit/studies/007/: Dockerfile  README.md  empty.py  modifier.py  postprocessor.py  preprocessor.py  replication_config.json  requirements.txt  retrieval_pos_neg.pkl  run_scripts.sh  runner.py
replikit/studies/009/: Dockerfile  README.md  entrypoint.sh  postprocessor.py  preprocessor.py  runner.py
replikit/studies/main19/: Dockerfile  README.md  error-log.txt  notes.txt  postprocessor.py  preprocessor.py  requirements.txt
replikit/studies/main2/: README.md  preprocessor.py  requirements.txt  runner.py
replikit/studies/main41/: .gitattributes  Dockerfile  README.md  entrypoint.sh  postprocessor.py  preprocessor.py  requirements.txt  runner.py
replikit/studies/template/: postprocessor.py  runner.py
(+2733 files in other folders)
